# DarkRelay

./: .gitignore  Cargo.toml  Cargo.workspace.toml  README.md
darkrelayclient/: Cargo.toml
darkrelayclient/src/: connection.rs  crypto.rs  dm_handler.rs  main.rs  state.rs
darkrelayclient/src/ui/: auth_dialog.rs  dm_view.rs  file_dialog.rs  main_layout.rs  mod.rs
darkrelayprotocol/: Cargo.toml
darkrelayprotocol/src/: channel.rs  crypto.rs  lib.rs  permissions.rs  protocol.rs
darkrelayserver/: Cargo.toml
darkrelayserver/src/: admin.rs  auth.rs  ban_manager.rs  channel.rs  crypto.rs  dm_manager.rs  file_transfer.rs  handler.rs  main.rs  registry.rs  tls.rs
