[workspace]
resolver = "2"
members = [
  "darkrelayprotocol",
  "darkrelayserver",
  "darkrelayclient",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
x25519-dalek = "2.0"
aes-gcm = "0.10"
rand = "0.8"
rcgen = "0.11"
pbkdf2 = { version = "0.12", features = ["simple"] }
