[package]
name = "darkrelayclient"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
darkrelayprotocol = { path = "../darkrelayprotocol" }

serde.workspace = true
bincode.workspace = true
chrono.workspace = true

tokio.workspace = true

crossterm = "0.27"

tracing.workspace = true
tracing-subscriber.workspace = true
