[package]
name = "darkrelayclient"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
darkrelayprotocol = { path = "../darkrelayprotocol" }

serde.workspace = true
bincode.workspace = true
chrono.workspace = true

tokio.workspace = true

crossterm = "0.27"

tracing.workspace = true
tracing-subscriber.workspace = true

rustls.workspace = true
tokio-rustls.workspace = true
x25519-dalek.workspace = true
aes-gcm.workspace = true
rand.workspace = true
pbkdf2.workspace = true
sha2 = "0.10"
webpki-roots = "0.25"
hex = "0.4"
