[package]
name = "darkrelayserver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
darkrelayprotocol = { path = "../darkrelayprotocol" }

serde.workspace = true
bincode.workspace = true
chrono.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

tokio.workspace = true

argon2 = { version = "0.5", features = ["std"] }

rustls.workspace = true
tokio-rustls.workspace = true
x25519-dalek.workspace = true
aes-gcm.workspace = true
rand.workspace = true
rcgen.workspace = true
rustls-pemfile = "1.0"
hex = "0.4"
